# docker-compose-fastapi-mongodb

./: .env  README.md  docker-compose.yml
docker-fastapi-mongodb/: Dockerfile
docker-fastapi-mongodb/app/: pyproject.toml
docker-fastapi-mongodb/app/app/: main.py
docker-fastapi-mongodb/app/app/api/api_v1/: api.py
docker-fastapi-mongodb/app/app/api/api_v1/endpoints/: item.py
docker-fastapi-mongodb/app/app/core/: config.py
docker-fastapi-mongodb/app/app/crud/: item.py
docker-fastapi-mongodb/app/app/db/: mongodb.py
docker-fastapi-mongodb/app/app/schema/: item.py
